# skill-sharing

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
docs/: ai-rules-sync-evaluation.md  consider-for-later.md  decisions.md  deep-research-report.md  iteration-plan.md  prior-art.md  problem-statement.md  research-brief.md  rulesync-evaluation.md  skill-schema.md
examples/explain-error/: SKILL.md
examples/proprietary-skill/: SKILL.md
examples/public-skill/: SKILL.md
examples/write-commit-message/: SKILL.md
scripts/: smoke.ts
skillctl/: __init__.py  cli.py  codex.py  hosts.py  inventory.py  llm.py  marketplace.py  merge.py  overlay.py  schema.py  visibility.py
src/: cli.ts  hosts.ts  inventory.ts  llm.ts  marketplace.ts  merge.ts  substrate.ts
test/: hosts.test.ts  substrate.test.ts
tests/: test_schema.py
