[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillctl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6",
    "python-frontmatter>=1.1",
    "marko>=2",
    "merge3>=0.0.15",
    "gitpython>=3.1",
    "anthropic>=0.26",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
skillctl = "skillctl.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["skillctl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
